aws/NetworkAcls-eu-central-1.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-853223ec", 
     "NetworkAclId": "acl-b5b724dc", 
     "SubnetId": "subnet-a67411cf"
    }, 
    {
     "NetworkAclAssociationId": "aclassoc-123d4778", 
     "NetworkAclId": "acl-b5b724dc", 
     "SubnetId": "subnet-4f695a05"
    }, 
    {
     "NetworkAclAssociationId": "aclassoc-843223ed", 
     "NetworkAclId": "acl-b5b724dc", 
     "SubnetId": "subnet-72b10a09"
    }
   ], 
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }
   ], 
   "IsDefault": true, 
   "NetworkAclId": "acl-b5b724dc", 
   "Tags": [], 
   "VpcId": "vpc-3509825c"
  }
 ]
}
